--- a/templates/exchange/_delete_form.html.twig
+++ b/templates/exchange/_delete_form.html.twig
@@ -1,9 +1,9 @@
 <form method="post" action="{{ path('app_exchange_delete', {'id': exchange.id}) }}" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer cet échange ? Cette action est irréversible.');" class="inline-block">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ exchange.id) }}">
-    <button type="submit" class="px-4 py-2 bg-red-500 text-white rounded hover:bg-red-600 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-offset-2 flex items-center">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-1" viewBox="0 0 20 20" fill="currentColor">
+    <button type="submit" class="btn-premium bg-gradient-to-r from-red-600 to-red-700 text-white font-medium px-5 py-2.5 rounded-lg shadow-lg hover:shadow-red-500/30 transition-all duration-300 transform hover:scale-105 flex items-center">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor">
             <path fill-rule="evenodd" d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z" clip-rule="evenodd" />
         </svg>
-        Supprimer l'échange
+        Confirmer la suppression
     </button>
 </form>
